# QUTMS_AV_Sim

./: LICENSE  README.md
qutms_sim/: CMakeLists.txt  package.xml
qutms_sim/config/: config.yaml  motion_noise.yaml  vehicle_params.yaml
qutms_sim/launch/: sim.launch copy.py  sim.launch.py
qutms_sim/urdf/: lidar.urdf.xacro  robot.urdf.xacro  wheels.urdf.xacro
qutms_sim/visuals/: QUTMS_AV_Sim control.json  default.rviz
qutms_sim/worlds/: QR_Nov_2022.csv
sim_vehicle/: CMakeLists.txt  package.xml  setup.cfg  setup.py
sim_vehicle/urdf/: lidar.urdf.xacro  robot.urdf.xacro  wheels.urdf.xacro
vehicle_plugin/gazebo_race_car_plugin/: CMakeLists.txt
vehicle_plugin/gazebo_race_car_plugin/include/gazebo_race_car_plugin/: gazebo_ros_race_car.hpp
vehicle_plugin/gazebo_race_car_plugin/src/: gazebo_ros_race_car.cpp
vehicle_plugins/: CMakeLists.txt  package.xml
vehicle_plugins/gazebo_cone_detection_plugin/: CMakeLists.txt
vehicle_plugins/gazebo_cone_detection_plugin/include/gazebo_cone_detection_plugin/: gazebo_cone_detection.hpp  utils.hpp
vehicle_plugins/gazebo_cone_detection_plugin/src/: gazebo_cone_detection.cpp
vehicle_plugins/gazebo_vehicle_plugin/: CMakeLists.txt
vehicle_plugins/gazebo_vehicle_plugin/include/gazebo_vehicle_plugin/: gazebo_vehicle.hpp  noise.hpp  utils.hpp  vehicle_model_bike.hpp  vehicle_param.hpp  vehicle_state.hpp
vehicle_plugins/gazebo_vehicle_plugin/src/: gazebo_vehicle.cpp
