<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qutms_sim</name>
  <version>0.0.1</version>
  <description>Launches gazebo with simulator plugins</description>
  <maintainer email="team@qutmotorsport.com">Alastair Bradford</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>
  <depend>gazebo_plugins</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <depend>python3-yaml</depend>
  <depend>python3-qt5-bindings</depend>
  <depend>ament_index_python</depend>

  <depend>vehicle_plugins</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
