<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vehicle_plugins</name>
  <version>0.0.1</version>
  <description>Gazebo plugins QUTMS's simulator stack</description>
  <maintainer email="team@qutmotorsport.com">Alastair Bradford</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <depend>gazebo</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_ros</depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>ackermann_msgs</depend>

  <depend>eufs_models</depend>

  <depend>ament_index_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
